# python-template

./: .buildinfo  .bumpversion.cfg  .copier-answers.yaml  .copier-answers.yml  .gitignore  MANIFEST.in  Makefile  README.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/.github/: CODE_OF_CONDUCT.doctree  pull_request_template.doctree
.doctrees/.github/ISSUE_TEMPLATE/: bug_report.doctree  feature_request.doctree  question.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/python_template/: index.doctree
.doctrees/autoapi/test_all/: index.doctree
.doctrees/docs/wiki/: Installation.doctree  _Footer.doctree  _Sidebar.doctree
.doctrees/docs/wiki/contribute/: Build-from-Source.doctree  Contribute.doctree  Local-Development-Setup.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  build.yml  copier.yml  docs.yaml  publish.yml
_sources/: README.md.txt  index.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/python_template/: index.rst.txt
_sources/docs/wiki/: Installation.md.txt
_sources/docs/wiki/contribute/: Build-from-Source.md.txt  Local-Development-Setup.md.txt
autoapi/: index.html
autoapi/python_template/: index.html
autoapi/test_all/: index.html
docs/: Makefile  api.md  conf.py  make.bat
docs/wiki/: Installation.html  Installation.md  _Footer.html  _Footer.md  _Sidebar.html
docs/wiki/contribute/: Build-from-Source.html  Contribute.html  Contribute.md  Local-Development-Setup.html
python_template/tests/: test_all.py
