[build-system]
requires = ["setuptools", "wheel"]
build-backend="setuptools.build_meta"

[project]
name = "python_template"
authors = [{name = "Tim Paine", email = "t.paine154@gmail.com"}]
description="A pure-python project template"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "0.1.0"
requires-python = ">=3.8"
keywords = [
    "some",
    "keywords",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy",
]

[project.urls]
Repository = "https://github.com/python-project-templates/python"
Homepage = "https://github.com/python-project-templates/python"

[project.optional-dependencies]
develop = [
    "bump2version",
    "check-manifest",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
    "semgrep",
    "Sphinx",
    "sphinx-markdown-builder",
    "twine",
    "wheel",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.check-manifest]
ignore = []

[tool.isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 120
profile = "black"

default_section = "THIRDPARTY"
sections = "FUTURE,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

known_first_party = "python_template"

[tool.mypy]
python_version = "3.10"
# show_error_codes = true
# follow_imports = "silent"
# strict_optional = true
# warn_redundant_casts = true
# warn_unused_ignores = true
# disallow_any_generics = true
# check_untyped_defs = true
# no_implicit_reexport = true
# warn_unused_configs = true
# disallow_subclassing_any = true
# disallow_incomplete_defs = true
# disallow_untyped_decorators = true
# disallow_untyped_calls = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = "python_template/tests"

[tool.ruff]
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
